Guardando cambios locales antes de fusionar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </header>
     <!-- ZONE GAME -->
     <container class="container">
+      <!-- ZONE RULETA -->
+      <img src="./assets/images/gettyimages-185091203-612x612.jpg" width="400px" >
       <!-- ZONE BOARD -->
       <section class="board">
         <!-- FIRST COLUMN -->
@@ -83,6 +85,10 @@
 
         <p class="even background-transparent">EVEN</p>
         <p class="odd background-transparent">ODD</p>
+
+        <p class="color-black background-black"></p>
+        <p class="color-red background-red"></p>
+      
       </section>
 
 
