--- a/index.html
+++ b/index.html
@@ -114,6 +114,27 @@
 
   </container>
 
+  <!-- BELOW THE GAME -->
+  <div class="container-below">
+    <!-- INSERT MONEY -->
+    <div class="money">
+      <p>Introduce la cantidad con la que quieres jugar:</p>
+      <input class="input" placeholder="€">
+    </div>
+    <!-- TOKENS -->
+    <div class="tokens">
+      
+      <div class="token"><img src="./assets/images/1 (1).png" class="uno"></div>
+      <div class="token"><img src="./assets/images/10 (1).png" class="diez"></div>
+      <div class="token"><img src="./assets/images/25 (1).png" class="veinticinco"></div>
+      <div class="token"><img src="./assets/images/50 (1).png" class="cincuenta"></div>
+      <div class="token"><img src="./assets/images/100.png" class="cien"></div>
+
+
+    </div>
+
+
+  </div>
 
 
   <script src="./js/script.js"></script>
