--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- NUMBER  -->
     <div class="number-div">
       <h3 class="number">Numero</h3>
+      <p id="number" class="number-generate"></p>
     </div>
     <!-- TEXT "ways to call roulette" -->
     <div class="call-roulette__div">
@@ -35,7 +36,8 @@
     <!-- ZONE RULETTE -->
 
     <div class="roulette">
-      <img src="./assets/images/5c165529b0164202f1cf04d6-removebg-preview.png" width="400px" class="img-roulette" />
+      <img src="./assets/images/5c165529b0164202f1cf04d6-removebg-preview.png" width="400px"
+      id="roulette" />
     </div>
     <!-- ZONE BOARD -->
     <div class="board-div">
@@ -119,6 +121,7 @@
   <div class="container-below">
     <!-- INSERT MONEY -->
     <div class="money" id="money">
+      <button class="play" id="play">Jugar</button>
       <p id="title__money">Introduce la cantidad con la que quieres jugar:</p>
       <input class="input" id="input" placeholder="€"><br>
       <button id="insert" class="insert">Insertar</button>
