--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/breakpoints.css">
 </head>
 
-<body>
+<body >
   <!-- HEADER -->
   <header class="header">
     <!-- TITLE -->
@@ -43,75 +43,74 @@
     <div class="board-div">
     <section class="board" id="board">
       <!-- FIRST COLUMN -->
-      <p class="cero background-transparent" data-value="verde 0">0</p>
+      <p class="cero background-transparent" value="0">0</p>
       <!-- SECOND COLUMN -->
-      <p class="numbers-one background-red" data-value="red 1">1</p>
-      <p class="numbers-two background-black" data-value="black 2">2</p>
-      <p class="numbers-three background-red" data-value="red 3">3</p>
+      <p class="numbers-one background-red" value="1">1</p>
+      <p class="numbers-two background-black" value="2">2</p>
+      <p class="numbers-three background-red" value="3">3</p>
       <!-- THREE COLUMN -->
-      <p class="numbers-four background-black" data-value="black 4">4</p>
-      <p class="numbers-five background-red" data-value="red 5">5</p>
-      <p class="numbers-six background-black" data-value="black 6">6</p>
+      <p class="numbers-four background-black" value="4">4</p>
+      <p class="numbers-five background-red" value="5">5</p>
+      <p class="numbers-six background-black" value="6">6</p>
       <!-- QUARTER COLUMN -->
-      <p class="numbers-seven background-red" data-value="red 7">7</p>
-      <p class="numbers-eight background-black" data-value="black 8">8</p>
-      <p class="numbers-nine background-red" data-value="red 9">9</p>
+      <p class="numbers-seven background-red" value="7">7</p>
+      <p class="numbers-eight background-black" value="8">8</p>
+      <p class="numbers-nine background-red" value="9">9</p>
       <!-- FIFTH COLUMN -->
-      <p class="numbers-ten background-black" data-value="black 10">10</p>
-      <p class="numbers-eleven background-black" data-value="black 11">11</p>
-      <p class="numbers-twelve background-red" data-value="red 12">12</p>
+      <p class="numbers-ten background-black" value="10">10</p>
+      <p class="numbers-eleven background-black" value="11">11</p>
+      <p class="numbers-twelve background-red" value="12">12</p>
       <!-- SIXTH COLUMN -->
-      <p class="numbers-thirteen background-black" data-value="black 13">13</p>
-      <p class="numbers-fourteen background-red" data-value="red 14">14</p>
-      <p class="numbers-fifteen background-black" data-value="black 15">15</p>
+      <p class="numbers-thirteen background-black" value="13">13</p>
+      <p class="numbers-fourteen background-red" value="14">14</p>
+      <p class="numbers-fifteen background-black" value="15">15</p>
       <!-- SEVENTH COLUMN -->
-      <p class="numbers-sixteen background-red" data-value="red 16">16</p>
-      <p class="numbers-seventeen background-black" data-value="black 17">17</p>
-      <p class="numbers-eighteen background-red" data-value="red 18">18</p>
+      <p class="numbers-sixteen background-red" value="16">16</p>
+      <p class="numbers-seventeen background-black" value="17">17</p>
+      <p class="numbers-eighteen background-red" value="18">18</p>
       <!-- EIGHTH COLUMN -->
-      <p class="numbers-nineteen background-red" data-value="red 19">19</p>
-      <p class="numbers-twenty background-black" data-value="black 20">20</p>
-      <p class="numbers-twentyone background-red" data-value="red 21">21</p>
+      <p class="numbers-nineteen background-red" value="19">19</p>
+      <p class="numbers-twenty background-black" value="20">20</p>
+      <p class="numbers-twentyone background-red" value="21">21</p>
       <!-- NINTH COLUMN -->
-      <p class="numbers-twentytwo background-black" data-value="black 22">22</p>
-      <p class="numbers-twentythree background-red" data-value="red 23">23</p>
-      <p class="numbers-twentyfour background-black" data-value="black 24">24</p>
+      <p class="numbers-twentytwo background-black" value="22">22</p>
+      <p class="numbers-twentythree background-red" value="23">23</p>
+      <p class="numbers-twentyfour background-black" value="24">24</p>
       <!-- TENTH COLUMN -->
-      <p class="numbers-twentyfive background-red" data-value="red 25">25</p>
-      <p class="numbers-twentysix background-black" data-value="black 26">26</p>
-      <p class="numbers-twentyseven background-red" data-value="red 27">27</p>
+      <p class="numbers-twentyfive background-red" value="25">25</p>
+      <p class="numbers-twentysix background-black" value="26">26</p>
+      <p class="numbers-twentyseven background-red" value="27">27</p>
       <!-- ELEVENTH COLUMN -->
-      <p class="numbers-twentyeight background-black" data-value="black 28">28</p>
-      <p class="numbers-twentynine background-black" data-value="black 29">29</p>
-      <p class="numbers-thirty background-red" data-value="red 30">30</p>
+      <p class="numbers-twentyeight background-black" value="28">28</p>
+      <p class="numbers-twentynine background-black" value="29">29</p>
+      <p class="numbers-thirty background-red" value="30">30</p>
       <!-- TWELFTH COLUMN -->
-      <p class="numbers-thirtyone background-black" data-value="black 31">31</p>
-      <p class="numbers-thirtytwo background-red" data-value="red 32">32</p>
-      <p class="numbers-thirtythree background-black" data-value="black 33">33</p>
+      <p class="numbers-thirtyone background-black" value="31">31</p>
+      <p class="numbers-thirtytwo background-red" value="32">32</p>
+      <p class="numbers-thirtythree background-black" value="33">33</p>
       <!-- THIRTEENTH COLUMN -->
-      <p class="numbers-thirtyfour background-red" data-value="red 34">34</p>
-      <p class="numbers-thirtyfive background-black" data-value="black 35">35</p>
-      <p class="numbers-thirtysix background-red" data-value="red 36">36</p>
+      <p class="numbers-thirtyfour background-red" value="34">34</p>
+      <p class="numbers-thirtyfive background-black" value="35">35</p>
+      <p class="numbers-thirtysix background-red" value="36">36</p>
       <!-- FOURTEENTH COLUMN -->
-      <p class="set-one background-transparent">2 to 1</p>
-      <p class="set-one background-transparent">2 to 1</p>
-      <p class="set-one background-transparent">2 to 1</p>
+      <p class="set-one background-transparent" value="3 6 9 12 15 18 21 24 27 30 33 36">2 to 1</p>
+      <p class="set-one background-transparent" value="2 5 8 11 14 17 20 23 26 29 32 35">2 to 1</p>
+      <p class="set-one background-transparent" value="1 4 7 10 13 16 19 22 25 28 31 34">2 to 1</p>
 
       <!-- DOWN AREA -->
-      <p class="set-two-1 background-transparent">1 st 12</p>
-      <p class="set-two-2 background-transparent">2 nd 12</p>
-      <p class="set-two-3 background-transparent">3 rd 12</p>
+      <p class="set-two-1 background-transparent" value="1 2 3 4 5 6 7 8 9 10 11 12">1 st 12</p>
+      <p class="set-two-2 background-transparent" value="13 14 15 16 17 18 19 20 21 22 23 24">2 nd 12</p>
+      <p class="set-two-3 background-transparent" value="25 26 27 28 29 30 31 32 33 34 35 36">3 rd 12</p>
 
-      <p class="set-three-1 background-transparent">1 to 18</p>
-      <p class="set-three-2 background-transparent">19 to 36</p>
-
-      <p class="even background-transparent">EVEN</p>
-      <p class="odd background-transparent">ODD</p>
-
-      <p class="color-black background-black" data-value="black"></p>
-      <p class="color-red background-red" data-value="red"></p>
 
     </section>
+
+    <div id="mensaje-ganancia" style="display: none;" class="mensaje">
+      ¡Has ganado <span id="cantidad-ganada" ></span> €!
+    </div>
+    <p id="mensaje-no-ganado" style="display: none;" class="mensaje">No has ganado nada esta vez.</p>
+
+    
   </div>
 
 
@@ -121,8 +120,8 @@
   <div class="container-below">
     <!-- INSERT MONEY -->
     <div class="money" id="money">
-      <button class="play" id="play">Jugar</button>
-      <p id="title__money">Introduce la cantidad con la que quieres recargar la cartera:</p>
+      <button class="play" id="play">Lanzar Bola</button>
+      <p id="title__money" class="title__money">Introduce la cantidad con la que quieres recargar la cartera:</p>
       <input class="input" id="input" placeholder="€"><br>
       <button id="insert" class="insert">Insertar</button>
       <p id="error" class="error"></p>
